--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nuxt": "^4.2.2",
     "ofetch": "^1.5.1",
     "rss-parser": "^3.13.0",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
     "ulid": "^3.0.2",
     "vue": "^3.5.26",
